# chess

./: Cargo.toml
src/: board_fast.rs  board_slow.rs  cpu.rs  main.rs  profiler.rs  render.rs  test.rs  util.rs
test/: check.txt  checkmate.txt  choice.txt  down.txt  endgame.txt  goingtolose.txt  haha.txt  lagame.txt  opening.txt  output.txt  promotion.txt  trade.txt  wellyes.txt
